docs/4.20/rest_api/provisioning_apis/provisioning-metal3-io-v1alpha1.md
Description
Provisioning contains configuration used by the Provisioning service (Ironic) to provision baremetal hosts. Provisioning is created by the OpenShift installer using admin or user provided information about the provisioning network and the NIC on the server that can be used to PXE boot it. This CR is a singleton, created by the installer and currently only consumed by the cluster-baremetal-operator to bring up and update containers in a metal3 cluster.

Type
`object`

# Specification

| Property     | Type                                                                                 | Description                                                                                                                                                                                                                                                                                          |
|--------------|--------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `apiVersion` | `string`                                                                             | APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources>  |
| `kind`       | `string`                                                                             | Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds> |
| `metadata`   | [`ObjectMeta`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-ObjectMeta) | Standard object’s metadata. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata>                                                                                                                                                                |
| `spec`       | `object`                                                                             | ProvisioningSpec defines the desired state of Provisioning                                                                                                                                                                                                                                           |
| `status`     | `object`                                                                             | ProvisioningStatus defines the observed state of Provisioning                                                                                                                                                                                                                                        |

## .spec

Description
ProvisioningSpec defines the desired state of Provisioning

Type
`object`

| Property                         | Type             | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|----------------------------------|------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `additionalNTPServers`           | `array (string)` | AdditionalNTPServers is a list of NTP Servers to be used by the provisioning service                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| `bootIsoSource`                  | `string`         | BootIsoSource provides a way to set the location where the iso image to boot the nodes will be served from. By default the boot iso image is cached locally and served from the Provisioning service (Ironic) nodes using an auxiliary httpd server. If the boot iso image is already served by an httpd server, setting this option to http allows to directly provide the image from there; in this case, the network (either internal or external) where the httpd server that hosts the boot iso is needs to be accessible by the metal3 pod.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| `disableVirtualMediaTLS`         | `boolean`        | DisableVirtualMediaTLS turns off TLS on the virtual media server, which may be required for hardware that cannot accept HTTPS links.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| `preProvisioningOSDownloadURLs`  | `object`         | PreprovisioningOSDownloadURLs is set of CoreOS Live URLs that would be necessary to provision a worker either using virtual media or PXE.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `provisioningDHCPExternal`       | `boolean`        | ProvisioningDHCPExternal indicates whether the DHCP server for IP addresses in the provisioning DHCP range is present within the metal3 cluster or external to it. This field is being deprecated in favor of provisioningNetwork.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| `provisioningDHCPRange`          | `string`         | ProvisioningDHCPRange needs to be interpreted along with ProvisioningDHCPExternal. If the value of provisioningDHCPExternal is set to False, then ProvisioningDHCPRange represents the range of IP addresses that the DHCP server running within the metal3 cluster can use while provisioning baremetal servers. If the value of ProvisioningDHCPExternal is set to True, then the value of ProvisioningDHCPRange will be ignored. When the value of ProvisioningDHCPExternal is set to False, indicating an internal DHCP server and the value of ProvisioningDHCPRange is not set, then the DHCP range is taken to be the default range which goes from .10 to .100 of the ProvisioningNetworkCIDR. This is the only value in all of the Provisioning configuration that can be changed after the installer has created the CR. This value needs to be two comma sererated IP addresses within the ProvisioningNetworkCIDR where the 1st address represents the start of the range and the 2nd address represents the last usable address in the range. |
| `provisioningDNS`                | `boolean`        | ProvisioningDNS allows sending the DNS information via DHCP on the provisionig network. It is off by default since the Provisioning service itself (Ironic) does not require DNS, but it may be useful for layered products (e.g. ZTP).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| `provisioningIP`                 | `string`         | ProvisioningIP is the IP address assigned to the provisioningInterface of the baremetal server. This IP address should be within the provisioning subnet, and outside of the DHCP range.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| `provisioningInterface`          | `string`         | ProvisioningInterface is the name of the network interface on a baremetal server to the provisioning network. It can have values like eth1 or ens3.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| `provisioningMacAddresses`       | `array (string)` | ProvisioningMacAddresses is a list of mac addresses of network interfaces on a baremetal server to the provisioning network. Use this instead of ProvisioningInterface to allow interfaces of different names. If not provided it will be populated by the BMH.Spec.BootMacAddress of each master.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| `provisioningNetwork`            | `string`         | ProvisioningNetwork provides a way to indicate the state of the underlying network configuration for the provisioning network. This field can have one of the following values - `Managed`- when the provisioning network is completely managed by the Baremetal IPI solution. `Unmanaged`- when the provsioning network is present and used but the user is responsible for managing DHCP. Virtual media provisioning is recommended but PXE is still available if required. `Disabled`- when the provisioning network is fully disabled. User can bring up the baremetal cluster using virtual media or assisted installation. If using metal3 for power management, BMCs must be accessible from the machine networks. User should provide two IPs on the external network that would be used for provisioning services.                                                                                                                                                                                                                                |
| `provisioningNetworkCIDR`        | `string`         | ProvisioningNetworkCIDR is the network on which the baremetal nodes are provisioned. The provisioningIP and the IPs in the dhcpRange all come from within this network. When using IPv6 and in a network managed by the Baremetal IPI solution this cannot be a network larger than a /64.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| `provisioningOSDownloadURL`      | `string`         | ProvisioningOSDownloadURL is the location from which the OS Image used to boot baremetal host machines can be downloaded by the metal3 cluster.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| `unsupportedConfigOverrides`     | `object`         | UnsupportedConfigOverrides are site-specific overrides that are not officially supported in the Metal platform and may cause the deployment to fail. Carefully check the description of each field you modify to understand its implications for stability and upgradability of your cluster. When reporting a bug, please make sure to reproduce it with UnsupportedConfigOverrides set to nil.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| `virtualMediaViaExternalNetwork` | `boolean`        | VirtualMediaViaExternalNetwork flag when set to "true" allows for workers to boot via Virtual Media and contact metal3 over the External Network. When the flag is set to "false" (which is the default), virtual media deployments can still happen based on the configuration specified in the ProvisioningNetwork i.e when in Disabled mode, over the External Network and over Provisioning Network when in Managed mode. PXE deployments will always use the Provisioning Network and will not be affected by this flag.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| `watchAllNamespaces`             | `boolean`        | WatchAllNamespaces provides a way to explicitly allow use of this Provisioning configuration across all Namespaces. It is an optional configuration which defaults to false and in that state will be used to provision baremetal hosts in only the openshift-machine-api namespace. When set to true, this provisioning configuration would be used for baremetal hosts across all namespaces.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |

## .spec.preProvisioningOSDownloadURLs

Description
PreprovisioningOSDownloadURLs is set of CoreOS Live URLs that would be necessary to provision a worker either using virtual media or PXE.

Type
`object`

| Property       | Type     | Description                                              |
|----------------|----------|----------------------------------------------------------|
| `initramfsURL` | `string` | InitramfsURL Image URL to be used for PXE deployments    |
| `isoURL`       | `string` | IsoURL Image URL to be used for Live ISO deployments     |
| `kernelURL`    | `string` | KernelURL is an Image URL to be used for PXE deployments |
| `rootfsURL`    | `string` | RootfsURL Image URL to be used for PXE deployments       |

## .spec.unsupportedConfigOverrides

Description
UnsupportedConfigOverrides are site-specific overrides that are not officially supported in the Metal platform and may cause the deployment to fail. Carefully check the description of each field you modify to understand its implications for stability and upgradability of your cluster. When reporting a bug, please make sure to reproduce it with UnsupportedConfigOverrides set to nil.

Type
`object`

| Property           | Type     | Description                                                                                                                                                                                                                                                                     |
|--------------------|----------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `ironicAgentImage` | `string` | Override for the IPA container image. The image must be based on openshift/ironic-agent-image of the same release as the cluster. After each cluster upgrade, it must be rebased and updated immediately, before any BareMetalHosts are enrolled, provisioned or deprovisioned. |

## .status

Description
ProvisioningStatus defines the observed state of Provisioning

Type
`object`

| Property             | Type      | Description                                                                                                             |
|----------------------|-----------|-------------------------------------------------------------------------------------------------------------------------|
| `conditions`         | `array`   | conditions is a list of conditions and their status                                                                     |
| `conditions[]`       | `object`  | OperatorCondition is just the standard condition fields.                                                                |
| `generations`        | `array`   | generations are used to determine when an item needs to be reconciled or has changed in a way that needs a reaction.    |
| `generations[]`      | `object`  | GenerationStatus keeps track of the generation for a given resource so that decisions about forced updates can be made. |
| `observedGeneration` | `integer` | observedGeneration is the last generation change you’ve dealt with                                                      |
| `readyReplicas`      | `integer` | readyReplicas indicates how many replicas are ready and at the desired state                                            |
| `version`            | `string`  | version is the level this availability applies to                                                                       |

## .status.conditions

Description
conditions is a list of conditions and their status

Type
`array`

## .status.conditions\[\]

Description
OperatorCondition is just the standard condition fields.

Type
`object`

Required
- `type`

| Property             | Type     | Description |
|----------------------|----------|-------------|
| `lastTransitionTime` | `string` |             |
| `message`            | `string` |             |
| `reason`             | `string` |             |
| `status`             | `string` |             |
| `type`               | `string` |             |

## .status.generations

Description
generations are used to determine when an item needs to be reconciled or has changed in a way that needs a reaction.

Type
`array`

## .status.generations\[\]

Description
GenerationStatus keeps track of the generation for a given resource so that decisions about forced updates can be made.

Type
`object`

| Property         | Type      | Description                                                                                                           |
|------------------|-----------|-----------------------------------------------------------------------------------------------------------------------|
| `group`          | `string`  | group is the group of the thing you’re tracking                                                                       |
| `hash`           | `string`  | hash is an optional field set for resources without generation that are content sensitive like secrets and configmaps |
| `lastGeneration` | `integer` | lastGeneration is the last generation of the workload controller involved                                             |
| `name`           | `string`  | name is the name of the thing you’re tracking                                                                         |
| `namespace`      | `string`  | namespace is where the thing you’re tracking is                                                                       |
| `resource`       | `string`  | resource is the resource type of the thing you’re tracking                                                            |

# API endpoints

The following API endpoints are available:

- `/apis/metal3.io/v1alpha1/provisionings`

  - `DELETE`: delete collection of Provisioning

  - `GET`: list objects of kind Provisioning

  - `POST`: create a Provisioning

- `/apis/metal3.io/v1alpha1/provisionings/{name}`

  - `DELETE`: delete a Provisioning

  - `GET`: read the specified Provisioning

  - `PATCH`: partially update the specified Provisioning

  - `PUT`: replace the specified Provisioning

- `/apis/metal3.io/v1alpha1/provisionings/{name}/status`

  - `GET`: read status of the specified Provisioning

  - `PATCH`: partially update status of the specified Provisioning

  - `PUT`: replace status of the specified Provisioning

## /apis/metal3.io/v1alpha1/provisionings

HTTP method
`DELETE`

Description
delete collection of Provisioning

| HTTP code          | Reponse body                                                                        |
|--------------------|-------------------------------------------------------------------------------------|
| 200 - OK           | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 401 - Unauthorized | Empty                                                                               |

HTTP responses

HTTP method
`GET`

Description
list objects of kind Provisioning

| HTTP code          | Reponse body                                                                          |
|--------------------|---------------------------------------------------------------------------------------|
| 200 - OK           | [`ProvisioningList`](../objects/index.xml#io-metal3-v1alpha1-ProvisioningList) schema |
| 401 - Unauthorized | Empty                                                                                 |

HTTP responses

HTTP method
`POST`

Description
create a Provisioning

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                                              | Description |
|-----------|-------------------------------------------------------------------------------------------------------------------|-------------|
| `body`    | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                                                      |
|--------------------|-------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |
| 201 - Created      | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |
| 202 - Accepted     | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |
| 401 - Unauthorized | Empty                                                                                                             |

HTTP responses

## /apis/metal3.io/v1alpha1/provisionings/{name}

| Parameter | Type     | Description              |
|-----------|----------|--------------------------|
| `name`    | `string` | name of the Provisioning |

Global path parameters

HTTP method
`DELETE`

Description
delete a Provisioning

| Parameter | Type     | Description                                                                                                                                                                                                                                              |
|-----------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`  | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed |

Query parameters

| HTTP code          | Reponse body                                                                        |
|--------------------|-------------------------------------------------------------------------------------|
| 200 - OK           | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 202 - Accepted     | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 401 - Unauthorized | Empty                                                                               |

HTTP responses

HTTP method
`GET`

Description
read the specified Provisioning

| HTTP code          | Reponse body                                                                                                      |
|--------------------|-------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |
| 401 - Unauthorized | Empty                                                                                                             |

HTTP responses

HTTP method
`PATCH`

Description
partially update the specified Provisioning

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| HTTP code          | Reponse body                                                                                                      |
|--------------------|-------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |
| 401 - Unauthorized | Empty                                                                                                             |

HTTP responses

HTTP method
`PUT`

Description
replace the specified Provisioning

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                                              | Description |
|-----------|-------------------------------------------------------------------------------------------------------------------|-------------|
| `body`    | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                                                      |
|--------------------|-------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |
| 201 - Created      | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |
| 401 - Unauthorized | Empty                                                                                                             |

HTTP responses

## /apis/metal3.io/v1alpha1/provisionings/{name}/status

| Parameter | Type     | Description              |
|-----------|----------|--------------------------|
| `name`    | `string` | name of the Provisioning |

Global path parameters

HTTP method
`GET`

Description
read status of the specified Provisioning

| HTTP code          | Reponse body                                                                                                      |
|--------------------|-------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |
| 401 - Unauthorized | Empty                                                                                                             |

HTTP responses

HTTP method
`PATCH`

Description
partially update status of the specified Provisioning

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| HTTP code          | Reponse body                                                                                                      |
|--------------------|-------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |
| 401 - Unauthorized | Empty                                                                                                             |

HTTP responses

HTTP method
`PUT`

Description
replace status of the specified Provisioning

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                                              | Description |
|-----------|-------------------------------------------------------------------------------------------------------------------|-------------|
| `body`    | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                                                      |
|--------------------|-------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |
| 201 - Created      | [`Provisioning`](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1) schema |
| 401 - Unauthorized | Empty                                                                                                             |

HTTP responses
